--- a/lesson-2/5.html
+++ b/lesson-2/5.html
@@ -42,6 +42,18 @@ Infinity делать не нужно, однако, в случае если б
    * @returns {number}  Результат операции.
    */
   function mathOperation(arg1, arg2, operation) {
+    /*   if (operation === "+") {
+         return sum(arg1, arg2);
+       } else if (operation === "-") {
+         return dif(arg1, arg2);
+       } else if (operation === "*") {
+         return multi(arg1, arg2);
+       } else if (operation === "/") {
+         return sub(arg1, arg2);
+       }
+       return NaN;
+     }
+     */
     switch (operation) {
       case "+":
         return sum(arg1, arg2)
@@ -55,7 +67,6 @@ Infinity делать не нужно, однако, в случае если б
         return NaN
     }
   }
-
   console.log(mathOperation(5, 3, "+")); // 8
   console.log(mathOperation(5, 3, "-")); // 2
   console.log(mathOperation(5, 3, "*")); //15
