--- a/lesson-3/3.html
+++ b/lesson-3/3.html
@@ -29,7 +29,7 @@
     },
   ];
 
-  products.forEach(products => {console.log(products * 10)});
+  products.forEach(products => console.log(products.price - 100 * 0.15));
 </script>
 </body>
 </html>
