--- a/lesson-2/5.html
+++ b/lesson-2/5.html
@@ -56,13 +56,13 @@ Infinity делать не нужно, однако, в случае если б
      */
     switch (operation) {
       case "+":
-        return sum(arg1, arg2)
+        return sum(arg1, arg2);
       case "-":
-        return dif(arg1, arg2)
+        return dif(arg1, arg2);
       case "*":
-        return multi(arg1, arg2)
+        return multi(arg1, arg2);
       case "/":
-        return sub(arg1, arg2)
+        return sub(arg1, arg2);
       default:
         return NaN
     }
