--- a/lesson-3/1.html
+++ b/lesson-3/1.html
@@ -18,16 +18,17 @@
 -->
 <script>
   "use strict";
-  
+
   for (let j = 0; j <= 10; j++) {
     if (j === 0) {
       console.log(`${j} - Это ноль`);
     } else if (j % 2 === 0) {
       console.log(`${j} - Четное число`);
-    } else
+    } else {
       console.log(`${j} - Нечетное число`);
     }
-  
+  }
+
   let i = 0;
   while (i <= 10) {
     if (i === 0) {
@@ -36,7 +37,7 @@
       console.log(`${i} - Четное число`);
     } else
       console.log(`${i} - Нечетное число`);
-    i++;
+      i++;
   }
 </script>
 </body>
