--- a/lesson-3/4.html
+++ b/lesson-3/4.html
@@ -43,19 +43,10 @@
       price: 78,
     },
   ];
-  const productsPhoto = products.filter(function (product) {
-    return "photos" in product && product.photos.length !== 0;
-  });
+  const productsPhoto = products.filter(product => "photos" in product && product.photos.length !== 0);
   console.log(productsPhoto);
 
-  products.sort(function (a, b) {
-    // if (a.price > b.price){
-    //   return 1;
-    // } if (a.price < b.price) {
-    //   return -1;
-    // }return 0;
-    return a.price - b.price;
-  });
+  products.sort((a, b) => a.price - b.price);
   console.log(products);
 </script>
 </body>
