--- a/lesson-5/1.html
+++ b/lesson-5/1.html
@@ -49,7 +49,7 @@
   3. Найти все элементы на странице с классом "card-link", которые лежат в
   элементе с классом "card-body" и вывести полученную коллекцию в консоль.
    */
-  const allBodyLink = document.querySelectorAll('.card-body *');
+  const allBodyLink = document.querySelectorAll('.card-body .card-link');
   console.log(allBodyLink);
         // или //
   const allBodyLinks = document.querySelector('.card-body');
